--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,185 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.layout{
+  width: 85%;
+  margin: 0 auto;
+}
+
+.header{
+  display: flex;
+  height: 132px;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 2px solid black;
+  margin-bottom: 35px;
+}
+
+.header .logo{
+  flex-grow: 2;
+  display: flex;
+}
+
+.header .logo span{
+  display: block;
+  font-size: 90px;
+  font-weight: bolder;
+  margin-top: -4px;
+}
+
+.header .logo h3{
+  display: block;
+  flex-basis: 40px;
+  margin-left: 10px;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+
+.header nav{
+  flex-grow: 1;
+}
+
+.header nav ul{
+  height: 132px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+}
+
+.header li{
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 17px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.header li a{
+  color: black;
+  text-decoration: none;
+  transition: all 300ms;
+}
+
+.header .active,
+.header a:hover{
+  color: crimson;
+}
+
+.content{
+  min-height: 400px;
+}
+
+.footer{
+  min-height: 80px;
+  line-height: 40px;
+  text-align: center;
+  font-size: 14px;
+  margin-top: 80px;
+  padding-top: 45px;
+  border-top: 3px solid black;
+  background: #f5f5f5;
+  color: #444;
+}
+
+.home h1{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: 400;
+  font-size: 40px;
+  margin-bottom: 0px;
+}
+
+.home strong{
+  color: crimson;
+}
+
+.home h2{
+  color: rgb(75, 74, 74);
+  font-weight: lighter;
+}
+
+.home a{
+  padding: 3px;
+  border-radius: 3px;
+  color: white;
+  background-color: orangered;
+  text-decoration: none;
+  transition: 300ms;
+}
+
+.home a:hover{
+  background-color: black;
+}
+
+.page .heading,
+.home .heading{
+  font-size: 40px;
+  font-weight: 500;
+  color: black;
+  margin-bottom: 0px;
+}
+
+.page .heading{
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.home p{
+  color: rgb(75, 74, 74);
+}
+
+.page .section-1,
+.page .section-2{
+  border-bottom: 2px solid gray;
+}
+
+.page .section-1 .heading{
+  text-align: center;
+  font-family: monospace;
+}
+
+
+.page .section-1 .employ{
+  font-family: Arial, Helvetica, sans-serif;
+  color: crimson;
+  text-align: center;
+}
+
+.page .section-1 .profile,
+.page .section-2 strong{
+  color: crimson;
+  font-family:monospace;
+  font-size: 14px;
+}
+
+.page .section-2 .skills .skills-list{
+  color: rgb(75, 74, 74);
+}
+
+.page .section-1 p{
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(75, 74, 74);
+}
+
+.section-2{
+  display: flex;
+}
+
+.section-2 .experience{
+  margin-left: 30px;
+}
+
+.section-2 .experience .job-title{
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin-top: -15px;
+  font-weight: bold;
+}
+
+.section-2 .experience .experiences{
+  margin-bottom: 40px;
+}
+
+.section-2 .experience .experiences .responsabilities{
+  color: rgb(75, 74, 74);
+}
