--- a/src/index.css
+++ b/src/index.css
@@ -158,7 +158,7 @@ code {
 
 .content{
   min-height: 400px;
-  margin-top: 180px;
+  margin-top: 120px;
   background: rgba(255, 255, 255, 0.178);
 }
 
@@ -250,8 +250,17 @@ code {
   transition: 300ms;
 }
 
+.home-text p {
+  margin-bottom: 1.5rem;
+  line-height: 1.6;
+}
+
+.home-text p:last-child {
+  margin-bottom: 0;
+}
+
 .button-socialmedia:hover{
-  background-color: black;
+  color: crimson;
 }
 
 .cover-letter .home-text{
@@ -363,12 +372,15 @@ code {
 }
 
 .home .home-text a{
-  padding: 1px;
-  border-radius: 5px;
-  color: white;
-  background-color: crimson;
   text-decoration: none;
+  color: crimson;
   transition: 300ms;
+}
+
+.home .home-text a:hover{
+  color: rgb(255, 27, 72);
+  transform: translateY(-2px);
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
 }
 
 .page .heading,
@@ -489,11 +501,7 @@ button{
   transition: 300ms;
 }
 
-.home .home-text a:hover,
-input[type='submit']:hover,
-button:hover{
-  background-color: black;
-}
+
 
 .works{
   display: flex;
